--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Vue Email List</title>
 </head>
 
 <body>
     <div id="root">
-        <main>
-            <h1>Random e-mails with Boolean API</h1>
-        </main>
+        <div class="container">
+            <h1>Show E-mail with Api</h1>
+            <ul class="email-list">
+                <li v-for="email in arrayEmail" class="email">{{ email }}</li>
+            </ul>
+            <button @click=" createEmail(10)" class="button">Show E-mail</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
